# fcc

./: .travis.yml  COPING  Cargo.toml  README.md  appveyor.yml  lib.rs
ci/: before_deploy.sh  script.sh
src/: concat.rs  error.rs  lib.rs  main.rs  util.rs
tests/: cli.rs
