[package]
authors = ["mapkts <vilscrolls@gmail.com>"]
description = "file concatenation utilities"
documentation = "https://docs.rs/fcc/"
edition = "2018"
include = [
  "src/**/*",
  "Cargo.toml",
  "README.md",
]
keywords = [
  "cli",
  "file",
  "concatenation",
]
license = "MIT OR Apache-2.0"
name = "fcc"
readme = "README.md"
repository = "https://github.com/mapkts/fcc/"
version = "0.3.0"

[dependencies]
clap = "2.33"
memmap = "0.7"
