[package]
authors = ["Aaron Taner <vilscrolls@gmail.com>"]
description = "File concatenation utility"
documentation = "https://docs.rs/fcc/"
edition = "2018"
include = [
  "src/**/*",
  "Cargo.toml",
  "README.md",
]
keywords = [
  "cli",
  "file",
  "concatenation",
]
license = "MIT OR Apache-2.0"
name = "fcc"
readme = "README.md"
repository = "https://github.com/mapkts/fcc/"
version = "0.4.2"

[dependencies]
admerge = "0.1.3"
structopt = "0.3"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"
tempfile = "3.1"
